<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/momentBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/stars_wallpaper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wordFeelView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="90dp"
        android:text="@string/feel"
        android:textColor="@color/colorForTitles"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wordTheView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="125dp"
        android:text="@string/the"
        android:textColor="@color/colorForTitles"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/momentBackgroundImage" />

    <TextView
        android:id="@+id/wordMomentView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="160dp"
        android:text="@string/moment"
        android:textColor="@color/colorForTitles"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>