<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/doNotThinkBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/road"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wordDoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="115dp"
        android:text="@string/doIt"
        android:textColor="@color/colorForTitles"
        android:textSize="40sp"
        android:textStyle="bold"
        android:shadowColor="@color/shadowForDoNotThinkTitleText"
        android:shadowDx="7"
        android:shadowDy="7"
        android:shadowRadius="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wordNotView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="150dp"
        android:text="@string/not"
        android:textColor="@color/colorForTitles"
        android:textSize="40sp"
        android:textStyle="bold"
        android:shadowColor="@color/shadowForDoNotThinkTitleText"
        android:shadowDx="7"
        android:shadowDy="7"
        android:shadowRadius="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wordThinkView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="185dp"
        android:text="@string/think"
        android:textColor="@color/colorForTitles"
        android:textSize="40sp"
        android:textStyle="bold"
        android:shadowColor="@color/shadowForDoNotThinkTitleText"
        android:shadowDx="7"
        android:shadowDy="7"
        android:shadowRadius="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>