<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/aloneBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/forest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wordFeelFromAloneFrView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="115dp"
        android:text="@string/feel"
        android:textColor="@color/colorForTitles"
        android:textSize="40sp"
        android:textStyle="bold"
        android:shadowColor="@color/shadowForAloneTitleText"
        android:shadowDx="7"
        android:shadowDy="7"
        android:shadowRadius="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wordYourselfView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="150dp"
        android:text="@string/yourself"
        android:textColor="@color/colorForTitles"
        android:textSize="40sp"
        android:textStyle="bold"
        android:shadowColor="@color/shadowForAloneTitleText"
        android:shadowDx="7"
        android:shadowDy="7"
        android:shadowRadius="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wordAloneView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="185dp"
        android:text="@string/alone"
        android:textColor="@color/colorForTitles"
        android:textSize="40sp"
        android:textStyle="bold"
        android:shadowColor="@color/shadowForAloneTitleText"
        android:shadowDx="7"
        android:shadowDy="7"
        android:shadowRadius="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>