<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMusicPlayer"
    tools:context=".player.AloneActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/titlePhoto"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/place_holder_for_title"
        app:layout_constraintBottom_toTopOf="@+id/layoutPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="15dp" />

    <TextView
        android:id="@+id/textTitleOfTrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/clear"
        android:textColor="@color/colorPrimaryText"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/titlePhoto" />

    <TextView
        android:id="@+id/textNameOfArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_mind"
        android:gravity="center"
        android:textColor="@color/colorSecondaryText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textTitleOfTrack" />

    <ImageButton
        android:id="@+id/backToMenuButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        android:background="@null"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/music_player_background"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/fakeImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/play_button_view"
            android:contentDescription="@string/app_name"
            android:padding="12dp"
            android:src="@drawable/ic_play"
            app:layout_constraintBottom_toTopOf="@id/fakeImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/previousButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/next_previous_button_shapes"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@drawable/ic_previous"
            app:layout_constraintBottom_toBottomOf="@id/playButton"
            app:layout_constraintEnd_toStartOf="@id/playButton"
            app:layout_constraintTop_toTopOf="@id/playButton" />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/next_previous_button_shapes"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="@id/playButton"
            app:layout_constraintStart_toEndOf="@id/playButton"
            app:layout_constraintTop_toTopOf="@id/playButton" />

        <ImageButton
            android:id="@+id/listOfTracksButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:background="@null"
            android:src="@drawable/ic_list_of_tracks"
            app:layout_constraintBottom_toBottomOf="@+id/previousButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/previousButton" />


        <SeekBar
            android:id="@+id/playerSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="25dp"
            android:progress="30"
            android:theme="@style/SeekBarTheme"
            app:layout_constraintBottom_toTopOf="@id/playButton" />

        <TextView
            android:id="@+id/textCurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="4dp"
            android:text="@string/_0_00"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintBottom_toTopOf="@id/playerSeekBar"
            app:layout_constraintStart_toStartOf="@id/playerSeekBar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTimeTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="4dp"
            android:text="@string/_0_00"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintBottom_toTopOf="@id/playerSeekBar"
            app:layout_constraintEnd_toEndOf="@id/playerSeekBar"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>